<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentViewTeacherWeek">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_info_teacher_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:backgroundTint="@color/grey_blank"
        android:padding="@dimen/dp_10">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_margin="@dimen/dp_5">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/name_subject"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/name_subject"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/name_teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/name_teacher"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="@dimen/zero_size"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/date"
                    android:textSize="@dimen/sp_14" />

                <ImageView
                    android:id="@+id/image_setting"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:contentDescription="@string/hello_moto"
                    android:fontFamily="@font/poppins_bold"
                    android:src="@drawable/ic_more"
                    android:textSize="@dimen/sp_14" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/name_campus"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/name_auditoria"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/name_auditoria"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/name_classroom"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/name_day_week"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/Monday"
                    android:textSize="@dimen/sp_14" />
            </TableRow>
        </TableLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>