<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="presentation.viewDayShedule.FragmentViewDayShedule"
    android:background="@color/grey_blank"
    android:padding="@dimen/dp_5"
    android:layout_marginTop="@dimen/dp_10"
    android:layout_marginBottom="@dimen/dp_10">


    <TextView
        android:id="@+id/name_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/name_subject"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/name_teacher"
        app:layout_constraintHorizontal_chainStyle="spread"/>

    <TextView
        android:id="@+id/name_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/name_teacher"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toEndOf="@id/name_subject"
        app:layout_constraintEnd_toStartOf="@id/date"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/date"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toEndOf="@id/name_teacher"
        app:layout_constraintEnd_toStartOf="@id/setting_view_info"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/setting_view_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:contentDescription="@string/hello_moto"
        android:fontFamily="@font/poppins_bold"
        android:src="@drawable/ic_more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_campus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/name_auditoria"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toStartOf="@id/name_auditoria"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_subject" />

    <TextView
        android:id="@+id/name_auditoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/name_classroom"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/name_campus"
        app:layout_constraintTop_toTopOf="@id/name_campus" />

</androidx.constraintlayout.widget.ConstraintLayout>