<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.blank_for_add_subject.BlankAddSubject">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.91" />

    <ImageView
        android:id="@id/graduation"
        android:layout_width="@dimen/zero_size"
        android:layout_height="@dimen/zero_size"
        android:src="@drawable/ic_graduation_im"
        app:layout_constraintTop_toBottomOf="@id/bottom_guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_back"
        android:layout_width="51dp"
        android:layout_height="50dp"
        android:background="@drawable/vector_back"
        android:backgroundTint="@color/major"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toTopOf="@id/top_guideline"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@id/button_week_schedule"
        android:layout_width="232dp"
        android:layout_height="54dp"
        android:layout_marginStart="@dimen/dp_100"
        android:layout_marginEnd="@dimen/dp_100"
        android:background="@drawable/btn_radius_10dp"
        android:backgroundTint="@color/major"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/week_shedule"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toEndOf="@id/button_back"
        app:layout_constraintTop_toTopOf="@id/top_guideline" />

    <ImageView
        android:id="@id/shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
      />

    <TextView
        android:id="@+id/subject_text"
        android:layout_width="@dimen/zero_size"
        android:layout_height="@dimen/zero_size"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/major"
        android:fontFamily="@font/poppins_bold"
        android:padding="@dimen/dp_10"
        android:text="@string/subject"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/button_week_schedule"
        tools:ignore="TextContrastCheck" />

    <TableLayout
        android:id="@+id/table_layout_form"
        android:layout_width="@dimen/zero_size"
        android:layout_height="@dimen/zero_size"
        android:layout_gravity="center"
        android:background="@color/grey_blank"
        android:padding="@dimen/dp_10"
       android:layout_marginTop="@dimen/dp_45"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_100"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/subject_text"
        app:layout_constraintEnd_toEndOf="@+id/subject_text"
        app:layout_constraintStart_toStartOf="@id/subject_text"
        app:layout_constraintTop_toTopOf="@+id/subject_text">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/subject_name"
                android:layout_width="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:padding="@dimen/dp_10"
                android:text="@string/subject_name"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_size_text" />

            <EditText
                android:id="@+id/edit_text_text_subject_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext_rounded_corners"
                android:hint="@string/write_name_subject"
                android:inputType="textPersonName"
                android:textSize="@dimen/normal_size_text"
                app:layout_column="0"
                app:layout_row="0" />

            <ImageView
                android:id="@+id/image_bottom_show_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:src="@drawable/more_black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_time"
                android:layout_width="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:padding="@dimen/dp_10"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_size_text" />

            <EditText
                android:id="@+id/edit_text_text_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext_rounded_corners"
                android:hint="@string/write_time"
                android:inputType="textPersonName"
                android:textSize="@dimen/normal_size_text"
                app:layout_column="0"
                app:layout_row="0" />

            <ImageView
                android:id="@+id/image_bottom_more_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:src="@drawable/more_black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_day"
                android:layout_width="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:padding="@dimen/dp_10"
                android:text="@string/day"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_size_text" />

            <EditText
                android:id="@+id/edit_text_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext_rounded_corners"
                android:hint="@string/write_day_of_week"
                android:inputType="textPersonName"
                android:textSize="@dimen/normal_size_text"
                app:layout_column="0"
                app:layout_row="0" />

            <ImageView
                android:id="@+id/bottom_more_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:src="@drawable/more_black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_location"
                android:layout_width="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:padding="@dimen/dp_10"
                android:text="@string/Location_name"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_size_text" />

            <EditText
                android:id="@+id/edit_text_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext_rounded_corners"
                android:hint="@string/write_name_location"
                android:inputType="textPersonName"
                android:textSize="@dimen/normal_size_text"
                app:layout_column="0"
                app:layout_row="0" />

            <ImageView
                android:id="@+id/bottom_more_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:src="@drawable/more_black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_classroom"
                android:layout_width="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:padding="@dimen/dp_10"
                android:text="@string/classroom_name"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_size_text" />

            <EditText
                android:id="@+id/edit_text_classroom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext_rounded_corners"
                android:hint="@string/write_name_classroom"
                android:inputType="textPersonName"
                android:textSize="@dimen/normal_size_text"
                app:layout_column="0"
                app:layout_row="0" />

            <ImageView
                android:id="@+id/bottom_more_classroom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:src="@drawable/more_black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_teacher_name"
                android:layout_width="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:padding="@dimen/dp_10"
                android:text="@string/teacher_name"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_size_text" />

            <EditText
                android:id="@+id/edit_text_teacher_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext_rounded_corners"
                android:hint="@string/write_name_teacher"
                android:inputType="textPersonName"
                android:textSize="@dimen/normal_size_text"
                app:layout_column="0"
                app:layout_row="0" />

            <ImageView
                android:id="@+id/bottom_more_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:src="@drawable/more_black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_age"
                android:layout_width="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:padding="@dimen/dp_10"
                android:text="@string/age"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_size_text" />

            <EditText
                android:id="@+id/edit_text_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext_rounded_corners"
                android:hint="@string/write_age"
                android:inputType="textPersonName"
                android:textSize="@dimen/normal_size_text"
                app:layout_column="0"
                app:layout_row="0"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/bottom_more_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:src="@drawable/more_black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_phone_number"
                android:layout_width="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:padding="@dimen/dp_10"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_size_text" />

            <EditText
                android:id="@+id/edit_text_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext_rounded_corners"
                android:hint="@string/write_phone_number"
                android:inputType="textPersonName"
                android:textSize="@dimen/normal_size_text"
                app:layout_column="0"
                app:layout_row="0"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/bottom_more_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:src="@drawable/more_black" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@id/button_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/roundstyle"
        android:text="@string/done"
        android:textColor="@color/black"
        app:backgroundTint="@color/grey_blank"
        app:layout_constraintBottom_toBottomOf="@+id/subject_text"
        app:layout_constraintEnd_toEndOf="@+id/table_layout_form"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/subject_text"
        app:layout_constraintTop_toBottomOf="@+id/table_layout_form"
        app:layout_constraintVertical_bias="0.218" />

</androidx.constraintlayout.widget.ConstraintLayout>